# hello-agents-study

./: .gitignore  pyproject.toml
chapter1/: agent.py  llm.py  prompt.py  study.py  tool_search.py  tool_total.py  tool_weather.py
chapter10/: 01_TestConnect.py  02_Connect2MCP.py  03_GitHubMCP.py  04_MCPTransport.py  05_UseMCPToolInAgent.py  06_MultiAgentDocumentAssist.py  07_SimpleA2AAgent.py  08_CustomA2AAgent.py  09_A2A_Client.py  09_A2A_Network.py  09_A2A_Server.py  09_A2A_WithAgent.py  10_A2ATool_Simple.py  10_AgentNegotiation.py  10_CustomerService.py  11_ANPInit.py  12_ANPTaskDistribution.py  13_ANPLoadBalancing.py  14_test_weather_server.py  14_weather_agent.py  14_weather_mcp_server.py  example.txt  my_README.md  my_mcp_server.py  report.md
chapter2/: ELIZA.py
chapter3/: BPE.py  N_gram.py  Qwen.py  Transformer.py  Word_Embedding.py
chapter4/: ReAct.py  Reflection.py  llm_client.py  plan_and_solve.py  tools.py
chapter7/: my_advanced_search.py  my_calculator_tool.py  my_llm.py  my_main.py  my_plan_solve_agent.py  my_react_agent.py  my_reflection_agent.py  my_simple_agent.py  test_advanced_search.py  test_hello_agents.py  test_my_calculator.py  test_plan_solve_agent.py  test_react_agent.py  test_reflection_agent.py  test_simple_agent.py
chapter8/: 01_MemoryTool_Basic_Operations.py  02_MemoryTool_Architecture.py  03_WorkingMemory_Implementation.py  04_RAGTool_MarkItDown_Pipeline.py  05_RAGTool_Advanced_Search.py  11_Q&A_Assistant.py  8_1_memory_and_arg.py  8_2_2_memory_demo.py  8_3_3_rag_demo.py
chapter9/: 01_context_builder_basic.py  (+10 more)
(+53 files in other folders)
